# Trader-daily-routine

./: .gitignore  README.md  agent_instructions.json  capital_estimator.py  config.py  flow_estimator.py  llm.py  main.py  pyproject.toml  report.py  requirements.txt  schema.py  summary.py
data/: __init__.py  benchmarks.py  cot.py  futures.py  goldman_cta_benchmarks.py
docs/: dealer-gamma-exposure-technical-report.md
docs/plans/: 2026-04-15-human-readable-summary-design.md  2026-04-15-human-readable-summary-implementation.md  2026-04-15-validation-wiring-fixes.md  2026-04-16-cta-capital-state-and-llm-note-design.md  2026-04-16-cta-capital-state-and-llm-note-implementation.md  2026-04-16-cta-proxy-flow-and-summary-design.md  2026-04-16-cta-proxy-flow-and-summary-implementation.md  2026-04-16-live-nowcast-implementation.md
docs/superpowers/plans/: 2026-04-14-big-money-flow-monitor.md  2026-04-14-dealer-gamma-dashboard-SUPERSEDED.md
model/: __init__.py  crowding.py  portfolio.py  tactical_equity.py  trend.py  volatility.py
tests/: test_agent_instructions.py  test_capital.py  test_composite_score.py  test_config.py  test_cot.py  test_cot_codes.py  test_crowding.py  test_flow.py  test_futures.py  test_goldman_benchmark.py  test_goldman_calibration.py  test_llm.py  test_portfolio.py  test_report.py  test_summary.py  test_tactical_equity.py  test_threshold_buckets.py
validation/: __init__.py  composite_score.py  goldman_benchmark.py  goldman_calibration.py  position_validation.py  return_validation.py  signal_validation.py
