[project]
name = "trader-daily-routine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cot-reports>=0.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "tabulate>=0.10.0",
    "yfinance>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
